fix: [PL-20844]: fixed alignment and visibility-condition issues of Identifier-error

--- a/src/components/InputWithIdentifier/InputWithIdentifier.css
+++ b/src/components/InputWithIdentifier/InputWithIdentifier.css
@@ -14,4 +14,8 @@
     text-overflow: ellipsis;
     color: var(--primary-7);
   }
+
+  .idError {
+    margin-top: -8px;
+  }
 }
